--- a/README
+++ b/README
@@ -37,3 +37,16 @@ Here is the schema and explanation of each variable in the files:
 * person (str) - customer id
 * time (int) - time in hours since start of test. The data begins at time t=0
 * value - (dict of strings) - either an offer id or transaction amount depending on the record
+
+
+You will need the following library to run the code :
+
+pandas
+numpy
+math
+json
+datetime
+plotly.express
+plotly.graph_objects 
+
+
